att - gerar config separado e depois relacionar datas com essa config